# aki

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: pr-test.yml
examples/: .env.sample  bedrock_example.py  prompt_cache_example.py  tool_cache_example.py
scripts/: build_release.sh
src/aki/: __init__.py  app.py  console_print.py  event_handler.py  init_aki.py  version.py
src/aki/callback/: chainlit_callback.py  usage_callback.py
src/aki/chat/: export_conversation.py  profile_factory.py  profile_registry.py
src/aki/chat/base/: agent_profile.py  base_profile.py  environment_details.py
src/aki/chat/graph/: agent_graph.py  supervisor_graph.py
src/aki/chat/implementations/agent/: __init__.py
src/aki/chat/implementations/supervisor/: aki_team.py
src/aki/config/: .env.example  __init__.py  constants.py  environment.py  logging.yaml  logging_config.py  paths.py  profile_manager.py
src/aki/llm/: __init__.py  capabilities.py  factory.py  reasoning.py  token_counter.py
src/aki/llm/providers/: __init__.py  base.py  bedrock.py  ollama.py
src/aki/persistence/: chainlit_sqlite_adapter.py  dal.py  database_factory.py  database_manager.py  database_schema.sql  database_schema_sqlite.sql  models.py  postgres_manager.py  sqlite_manager.py
src/aki/profiles/: aki.json  akira.json  akisa.json
src/aki/profiles/prompts/: aki.txt  aki_rule.txt  aki_team.txt  akira.txt  akira_rule.txt  akira_team.txt  akisa.txt  akisa_rule.txt  akisa_team.txt  akita_team.txt  memory_prompts.py
src/aki/public/css/: stylesheet.css
src/aki/public/elements/: BrowserViewer.jsx  HtmlRenderer.jsx  MermaidRenderer.jsx
src/aki/public/js/: custom.js
src/aki/tools/: __init__.py  batch_tool.py  browser_control.py  code_executor.py  command_executor.py  custom_tool_node.py  param_conversion.py  process_manager.py  render_html.py  render_mermaid.py  router.py  tasklist_manager.py  think.py  time.py  tool_executor.py  tool_routing.py  web_search.py
src/aki/tools/code_analyzer/: capture.py  code_analyzer.py  constants.py  file_compressor.py  filesystem_models.py  ignore_patterns.py  language_parser.py  output_formatters.py  repository_reader.py  supported_lang.py
src/aki/tools/code_analyzer/parse_strategies/: css_parse_strategy.py  default_parse_strategy.py  go_parse_strategy.py  parse_strategy.py  python_parse_strategy.py  typescript_parse_strategy.py
src/aki/tools/code_analyzer/tags_queries/: c_sharp_tags_query.py  css_tags_query.py
src/aki/tools/file_management/: base_tools.py  copy.py  delete.py  fast_edit.py  file_paths.py  file_search.py  grep_tool.py  list_dir.py  move.py  patch_utils.py  read.py  set_workspace.py  toolkit.py  whitelist.py  write.py
src/aki/tools/mcp/: __init__.py  check_server.py  client.py  server_manager.py  server_state.py  toolkit.py
src/aki/tools/mcp/installation/: __init__.py  manager.py
tests/: __init__.py  test_app.py  test_bedrock_provider.py  test_config.py  test_llm_reasoning.py  test_think.py  test_tool_routing.py  test_web_search.py
tests/chat/: test_export_conversation.py
tests/integration/: __init__.py  test_bedrock_provider.py
tests/tools/: __init__.py  test_absolute_paths.py  test_batch_tool.py  test_command_executor.py  test_copy_file.py  test_fast_edit.py  test_file_format_conversion.py  test_file_permissions.py  test_file_search.py  test_file_tool_implementations.py  test_grep_tool.py  test_mcp_client.py  test_move_file.py  test_path_comparison.py  test_path_router.py  test_read_file_encoding.py
tests/tools/code_analyzer/: __init__.py  java_sample_data.py  python_sample_data.py  test_code_analyzer.py  test_encoding.py  typescript_sample_data.py
tests/tools/code_analyzer/test_files/: latin1_file.md  utf16_file.md  utf8_file.md  windows1252_file.md
